--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^1.26.0",
     "axios": "^0.16.2",
     "md5": "^2.2.1",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-infinite": "^0.12.1",
+    "react-infinite-scroller": "^1.0.15",
     "react-scripts": "1.0.12",
     "recompose": "^0.25.0",
     "redux": "^3.7.2",
