--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@blueprintjs/core": "^1.26.0",
     "axios": "^0.16.2",
+    "history": "^4.7.2",
     "md5": "^2.2.1",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
@@ -12,6 +13,8 @@
     "react-dom": "^15.6.1",
     "react-infinite": "^0.12.1",
     "react-infinite-scroller": "^1.0.15",
+    "react-router": "3",
+    "react-router-dom": "^4.0.0",
     "react-scripts": "1.0.12",
     "recompose": "^0.25.0",
     "redux": "^3.7.2",
